--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables';
+
 .small {
     width: 3em;
     height: 3em;
@@ -40,6 +42,6 @@
 }
 
 .red {
-    fill: rgb(207, 0, 0);
+    fill: $color-primary-red;
 }
 
