--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -69,6 +69,22 @@
     }
 
     100% {
-        transform: translate(-5em, -7.5em);
+        transform: translate(-5.5em, -7.5em);
+    }   
+}
+
+@keyframes mainButton {
+    0% {
+        transform: translateY(3em);
+        opacity: 0;
+    }
+
+    80% {
+        opacity: 1;
+        transform: translateY(-.4em);
+    }
+
+    100% {
+        transform: translateY(0);
     }   
 }
