--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 //COLORS//
 $color-primary-red: rgba(207, 0, 0, 1);
+$color-secondary-red: rgb(134, 1, 1);
 
 //BORDER//
 $border-radius-basic: 5px;
