--- a/src/components/SettingsComponent/SettingsComponent.scss
+++ b/src/components/SettingsComponent/SettingsComponent.scss
@@ -1,4 +1,5 @@
 @import '../../scss/mixins';
+@import '../../scss/variables';
 
 .test {
     background-color: blue;
@@ -12,4 +13,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
+
+    &-content {
+        background-color: $color-secondary-red;
+        padding: 1.5em;
+        @include flexCenterColumn;
+        color: white
+    }
+
+    //SCROLL STYLE FOR FIREFOX//
+    scrollbar-color: $color-primary-red black;
+    scrollbar-width: thin;
+}
+
+//SCROLL STYLE FOR ALL W/O FIREFOX/EGDE/IE// 
+.SettingsComponent::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+    background-color: black;
+}
+
+.SettingsComponent::-webkit-scrollbar-thumb {
+    background: $color-primary-red;
 }
