--- a/src/containers/FirstPhaseMain/FirstPhaseMain.scss
+++ b/src/containers/FirstPhaseMain/FirstPhaseMain.scss
@@ -13,7 +13,15 @@
 
     &-composition {
         flex: 1;
+        height: 100%;
         min-height: 40em;
+        @include flexCenter;
+
+        &__background {
+            background-color: white;
+            width: 85%;
+            height: 100%;
+        }
     }
 
     &-settings {
