adding fields form

--- a/src/components/Forms/BackgroundForm/BackgroundForm.scss
+++ b/src/components/Forms/BackgroundForm/BackgroundForm.scss
@@ -23,5 +23,8 @@
     &-colorInput {
         margin-left: .8em;
         font-family: inherit;
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
