--- a/src/components/Forms/FieldsForm/FieldsForm.scss
+++ b/src/components/Forms/FieldsForm/FieldsForm.scss
@@ -1,7 +1,7 @@
 @import '../../../scss/mixins';
 @import '../../../scss//variables';
 
-.TitleForm {
+.FieldsForm {
     @include flexSpaceBetweenColumn;
     min-height: 12em;
     width: 100%;
