update background form

--- a/src/components/Forms/BackgroundForm/BackgroundForm.scss
+++ b/src/components/Forms/BackgroundForm/BackgroundForm.scss
@@ -27,4 +27,10 @@
             cursor: pointer;
         }
     }
+
+    &-numberInput {
+        margin-left: .8em;
+        font-family: inherit;
+        width: 5em;
+    }
 }
