--- a/src/components/SettingsToggler/SettingsToggler.scss
+++ b/src/components/SettingsToggler/SettingsToggler.scss
@@ -6,6 +6,7 @@
     margin-top: 1em;
     
     width: 85%;
+    max-width: 50em;
 
     &-labelDiv {
         background-color: $color-primary-red;
