--- a/src/components/Forms/FieldsForm/FieldsForm.scss
+++ b/src/components/Forms/FieldsForm/FieldsForm.scss
@@ -57,6 +57,10 @@
         display: flex;
         align-items: center;
         margin-bottom: 1.5em;
+
+        &:first-child {
+            margin-bottom: 3em;
+        }
     }
 
     &-colorInput,
