--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 //COLORS//
 $color-primary-red: rgba(207, 0, 0, 1);
 $color-secondary-red: rgb(134, 1, 1);
+$color-tertiary-red: rgb(175, 0, 0);
 
 //BORDER//
 $border-radius-basic: 5px;
