--- a/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
+++ b/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
@@ -66,3 +66,22 @@
         margin-top: 2em;
     }
 }
+
+.addOptionsButton {
+    background-color: $color-secondary-red;
+    border: none;
+    border-radius: $border-radius-basic;
+    font-weight: bold;
+    color: white;
+    font-size: 2.5em;
+    transition: all .2s;
+    margin-left: .5em;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        transform: translateY(.1em);
+    }
+}
