--- a/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
+++ b/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
@@ -65,17 +65,54 @@
         width: 100%;
         margin-top: 2em;
     }
+
+    &-optionsContainer {
+        margin-top: 1em;
+        margin-left: 2em;
+        min-height: 5em;
+        max-height: 20em;
+        overflow: auto;
+
+        scrollbar-color: $color-primary-red black;
+        scrollbar-width: thin;
+    }
+
+    &-optionsContainer::-webkit-scrollbar {
+        width: 5px;
+        height: 8px;
+        background-color: black;
+    }
+
+    &-optionsContainer::-webkit-scrollbar-thumb {
+        background: $color-secondary-red;
+    }
+
+    &-optionsList {
+        list-style: none;
+    }
+
+    &-optionsListElement {
+        display: flex;
+        align-items: center;
+        margin-top: .5em;
+    }
+
+    &-optionsListElement p {
+        font-size: 1.3em;
+    }
 }
 
 .addOptionsButton {
     background-color: $color-secondary-red;
-    border: none;
+    border: 1px solid white;
     border-radius: $border-radius-basic;
     font-weight: bold;
     color: white;
-    font-size: 2.5em;
+    font-size: 2.3em;
     transition: all .2s;
     margin-left: .5em;
+    height: 1.2em;
+    width: 1.2em;
 
     &:hover {
         cursor: pointer;
