--- a/src/components/CompositionComponent/CompositionComponent.scss
+++ b/src/components/CompositionComponent/CompositionComponent.scss
@@ -1,3 +1,5 @@
+@import '../../scss/mixins';
+@import '../../scss/variables';
 .CompositionComponent {
     overflow: auto;
     padding: 1em;
@@ -11,6 +13,49 @@
     }
 
     &-textInputDiv {
-        margin-top: 2em;
+        margin-top: 3em;
+        position: relative;
+        min-height: 6.7em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        &:hover > .CompositionComponent-fieldControls {
+            opacity: 1;
+        }
+    }
+
+    &-fieldControls {
+        @include flexCenter;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        filter: invert(100%);
+        min-height: 6.7em;
+        padding: .3em 1em;
+        border-radius: $border-radius-basic;
+        opacity: 0;
+        transition: .2s linear;
+    }
+
+    &-deleteDiv {
+        @include flexCenter;
+        margin-right: 1em;
+    }
+
+    &-arrowsDiv {
+        @include flexCenterColumn;
+    }
+
+    &-controlsButton {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        @include flexCenter;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
