--- a/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
+++ b/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
@@ -98,7 +98,7 @@
     }
 
     &-optionsListElement p {
-        font-size: 1.3em;
+        font-size: 1.4em;
     }
 }
 
@@ -111,8 +111,9 @@
     font-size: 2.3em;
     transition: all .2s;
     margin-left: .5em;
-    height: 1.2em;
-    width: 1.2em;
+    @include flexCenter;
+    width: 1.3em;
+    padding: 0;
 
     &:hover {
         cursor: pointer;
