--- a/src/components/DummyField/DummyField.scss
+++ b/src/components/DummyField/DummyField.scss
@@ -34,6 +34,7 @@
         top: 0;
         right: 0;
         height: 100%;
+        max-height: 6.8em;
         filter: invert(100%);
         min-height: 6.7em;
         padding: .3em 1em;
