--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 $color-primary-red: rgba(207, 0, 0, 1); //#cf0000
 $color-secondary-red: rgb(134, 1, 1); //#860101
 $color-tertiary-red: rgb(175, 0, 0); //#af0000
+$color-red-light:rgb(255, 113, 113);
 
 //BORDER//
 $border-radius-basic: 5px;
