--- a/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
+++ b/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
@@ -44,15 +44,22 @@
 
     &-selectInput,
     &-numberInput,
-    &-colorInput {
+    &-colorInput,
+    &-optionsInput {
         margin-left: .5em;
         font-size: 1.5em;
         padding: 2px;
     }
 
     &-selectInput,
+    &-optionsInput,
     &-numberInput {
         width: 5.5em;
+        margin: 0 .5em;
+    }
+
+    &-numberInput {
+        width: 3.5em;
     }
 
     &-selectInput:hover,
@@ -99,6 +106,25 @@
 
     &-optionsListElement p {
         font-size: 1.4em;
+    }
+    
+    &-errorMsg {
+        font-size: 1.3em;
+        padding: .5em 0 0 0;
+        text-decoration: underline;
+    }
+
+    &-error {
+        background-color: $color-red-light;
+    }
+
+    &-error:-webkit-autofill,
+    &-error:-webkit-autofill:hover, 
+    &-error:-webkit-autofill:focus, 
+    &-error:-webkit-autofill:active  {
+        -webkit-box-shadow: 0 0 0 30px $color-red-light inset !important;
+        box-shadow: 0 0 0 30px $color-red-light inset !important;
+        -webkit-text-fill-color: black !important;
     }
 }
 
