--- a/src/containers/FirstPhaseMain/FirstPhaseMain.scss
+++ b/src/containers/FirstPhaseMain/FirstPhaseMain.scss
@@ -4,18 +4,47 @@
 .FirstPhaseMain {
     background-color: blanchedalmond;
     width: 85%;
-    height: 80vh;
+    height: 90vh;
     min-height: 42em;
     border-radius: $border-radius-basic;
     padding: 1em;
-    @include flexCenter;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
     margin: 3em;
+
+    &-content {
+        @include flexCenter;
+        height: 85%;
+        width: 100%;
+    }
+
+    &-header {
+        width: 85%;
+        height: 5em;
+        max-width: 50em;
+        background-color: $color-primary-red;
+        border-radius: $border-radius-basic;
+        @include flexCenter;
+        margin-bottom: 1em;
+    }
+
+    &-headerText {
+        font-family: 'Bangers', cursive;
+        letter-spacing: 3px;
+        font-size: 4em;
+        color: white;
+        text-align: center;
+    }
 
     &-composition {
         flex: 1;
         height: 100%;
         min-height: 40em;
-        @include flexCenter;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         &__background {
             background-color: white;
@@ -28,6 +57,7 @@
         flex: 0 0 50%;
         height: 100%;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 }
