--- a/src/components/Forms/BackgroundForm/BackgroundForm.scss
+++ b/src/components/Forms/BackgroundForm/BackgroundForm.scss
@@ -30,8 +30,27 @@
     }
 
     &-numberInput {
-        margin-left: .8em;
+        margin: 0 .8em;
         font-family: inherit;
-        width: 5em;
+        width: 3.8em;
+    }
+
+    &-errorMsg {
+        font-size: 1.3em;
+        padding: .5em 0 0 0;
+        text-decoration: underline;
+    }
+
+    &-error {
+        background-color: $color-red-light;
+    }
+
+    &-error:-webkit-autofill,
+    &-error:-webkit-autofill:hover, 
+    &-error:-webkit-autofill:focus, 
+    &-error:-webkit-autofill:active  {
+        -webkit-box-shadow: 0 0 0 30px $color-red-light inset !important;
+        box-shadow: 0 0 0 30px $color-red-light inset !important;
+        -webkit-text-fill-color: black !important;
     }
 }
