--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -56,9 +56,9 @@
         transform: translate(-5.5em, -7.5em);
     }
 
-    &-buttonDiv {
+    /* &-buttonDiv {
         animation-name: mainButton;
         animation-duration: 1.4s;
         position: relative;
-    }
+    } */
 }
