--- a/src/components/BasicFormButton/BasicFormButton.scss
+++ b/src/components/BasicFormButton/BasicFormButton.scss
@@ -4,8 +4,8 @@
     font-family: inherit;
     font-size: 1.5em;
     font-weight: bold;
-    background-color: $color-primary-red;
-    color: white;
+    //background-color: $color-primary-red;
+    //color: white;
     border: none;
     padding: .5em 1.5em;
     border-radius: $border-radius-basic;
