--- a/src/components/MainButton/MainButton.scss
+++ b/src/components/MainButton/MainButton.scss
@@ -21,6 +21,7 @@
         animation-name: mainButton;
         animation-duration: 1.4s;
         position: relative;
+        //display: inline-block;
     }
     
     &-background {
