--- a/src/components/Forms/ButtonForm/ButtonForm.scss
+++ b/src/components/Forms/ButtonForm/ButtonForm.scss
@@ -182,4 +182,10 @@
             cursor: pointer;
         }
     }
+
+    &-buttonDiv {
+        @include flexCenter;
+        width: 100%;
+        margin-top: 2em;
+    }
 }
