--- a/src/components/MainButton/MainButton.scss
+++ b/src/components/MainButton/MainButton.scss
@@ -18,7 +18,7 @@
     }
 
     &-buttonDiv {
-        animation-name: mainButton;
+        //animation-name: mainButton;
         animation-duration: 1.4s;
         position: relative;
         //display: inline-block;
