--- a/src/containers/FinalFormContainer/FinalFormContainer.scss
+++ b/src/containers/FinalFormContainer/FinalFormContainer.scss
@@ -8,8 +8,9 @@
     border-radius: $border-radius-basic;
     padding: 1em;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
     margin: 3em;
+    padding: 3em;
 }
