--- a/src/containers/FinalFormContainer/FinalFormContainer.scss
+++ b/src/containers/FinalFormContainer/FinalFormContainer.scss
@@ -1,4 +1,5 @@
 @import '../../scss/variables';
+@import '../../scss/mixins';
 
 .FinalFormContainer {
     background-color: blanchedalmond;
@@ -8,9 +9,19 @@
     border-radius: $border-radius-basic;
     padding: 1em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     margin: 3em;
     padding: 3em;
+
+    &-buttonDiv {
+        flex: 0 0 10%;
+        @include flexCenter;
+    }
+
+    &-FormDiv {
+        flex: 1;
+        @include flexCenter;
+    }
 }
