--- a/src/components/DummyField/DummyField.scss
+++ b/src/components/DummyField/DummyField.scss
@@ -45,11 +45,17 @@
 
     &-deleteDiv {
         @include flexCenter;
-        margin-right: 1em;
+        margin-left: 1em;
     }
 
     &-arrowsDiv {
         @include flexCenterColumn;
+        margin: 0 .9em;
+    }
+
+    &-horizontalArrowsDiv {
+        @include flexCenter;
+        margin-left: -0.3em;
     }
 
     &-controlsButton {
@@ -59,6 +65,7 @@
         border-radius: $border-radius-basic;
         padding: 0.1em;
         outline: none;
+        margin: -0.3em;
 
         &:hover {
             cursor: pointer;
