--- a/src/components/ModalComponent/Modal/Modal.scss
+++ b/src/components/ModalComponent/Modal/Modal.scss
@@ -24,8 +24,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-between;
 
         position: relative;
+    }
+
+    &-title {
+        font-size: 3em;
     }
 }
