--- a/src/containers/FinalFormContainer/FinalFormContainer.scss
+++ b/src/containers/FinalFormContainer/FinalFormContainer.scss
@@ -4,8 +4,8 @@
 .FinalFormContainer {
     background-color: blanchedalmond;
     width: 85%;
-    min-height: 90vh;
-    min-height: 42em;
+    min-height: 70vh;
+    //min-height: 42em;
     border-radius: $border-radius-basic;
     padding: 1em;
     display: flex;
