--- a/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
+++ b/src/components/Forms/FieldSubForms/SelectFieldForm/SelectFieldForm.scss
@@ -75,7 +75,6 @@
 
     &-optionsContainer {
         margin-top: 1em;
-        margin-left: 2em;
         min-height: 5em;
         max-height: 15em;
         overflow: auto;
@@ -96,6 +95,10 @@
 
     &-optionsList {
         list-style: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        @include flexCenterColumn;
     }
 
     &-optionsListElement {
